# circuit-scope

./: .gitignore  LICENSE  P6.vcd  README.md  index.html  p6_cs.vcd  package-lock.json  package.json  simv  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
artifacts/: .gitignore
homebrew/: README.md
scripts/: compare_counter_vcd.sh  csverilog  csverilog.cmd  run-csverilog.mjs
src/: App.tsx  appVersion.ts  index.css  logger.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pty.rs  vcd_viewer.rs
src-tauri/verilog-core/: Cargo.toml
src-tauri/verilog-core/examples/: tauri_vcd_header.rs
src-tauri/verilog-core/scripts/: compare_tb7_result_vcd.py
src-tauri/verilog-core/src/: arith.rs  codegen.rs  csverilog_pipeline.rs  delay_rational.rs  expr_const.rs  ir.rs  lexer.rs  lib.rs  optimizer.rs  parser.rs  semantic.rs  timescale_util.rs
src-tauri/verilog-core/tests/: IR_TESTS.md  always_delay_initial_literal_test.rs  codegen_tests.rs  derive_cycles_test.rs  fixture_tests.rs  ir_generator_tests.rs  lab4_selector_test.rs  lexer_tests.rs  multi_root_top_test.rs  optimizer_tests.rs  parser_tests.rs  project6_eecs270_test.rs  project7_regression.rs  regression_known_bugs.rs  semantic_tests.rs  sequential_rtl_tests.rs  simulate_path_test.rs  timescale_scan_test.rs  tlc_style_parser_test.rs  wellen_compat_test.rs
src-tauri/verilog-core/tests/codegen_fixtures/: comb_logic.v  counter.v  counter_tb.v  hierarchy.v  initial_tb.v  instance_output_partselect.v  instance_output_partselect_dynamic.v  multibit.v  nested_hier.v
src-tauri/verilog-core/tests/codegen_fixtures/eecs270_p6/: B4to7SEG.v  TLC.v  TestBench6.v
src-tauri/verilog-core/tests/common/: mod.rs
src-tauri/verilog-core/tests/fixtures/: addsub_const_inputs_tb.v  bad_header.v  hierarchy.v  p7_case_nba_fsm_tb.v  param_and_ranges.v  ripple_addsub_w4_tb.v  signed_literal_sw_slice_tb.v  simple_top.v
src-tauri/verilog-core/tests/ir_fixtures/: ir_branch_case.v  ir_branch_if.v  ir_comb_chain.v  ir_comb_simple.v  ir_hierarchy.v  ir_memory.v  ir_seq_counter.v
src-tauri/verilog-core/tests/optimizer_fixtures/: opt_absorption.v  opt_alias.v  opt_always_loop.v  opt_bitwise.v  opt_canonical.v  opt_combined.v  opt_complement.v  opt_const_fold.v  opt_const_prop.v  opt_copy_prop.v  opt_cse.v  opt_dead.v  opt_identity.v  opt_inlining.v  opt_peephole.v  opt_port_inline.v  opt_sinking.v  opt_strength.v  opt_ternary.v
(+8 files in other folders)
