[package]
name = "circuit_scope"
version = "0.2.1"
edition = "2021"
description = "Circuit Scope — Verilog (IEEE 1364) editor, simulator, and VCD viewer."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
verilog_core = { path = "verilog-core" }
portable-pty = "0.8"
anyhow = "1"
wellen = "0.20"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

