[package]
name = "verilog_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csverilog"
path = "src/bin/csverilog.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
wellen = "0.20"

