[package]
name = "verilog_core"
version = "0.2.1"
edition = "2021"
description = "IEEE 1364 Verilog parse, optimize, and VCD simulation for Circuit Scope (not SystemVerilog)."

[[bin]]
name = "csverilog"
path = "src/bin/csverilog.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
wellen = "0.20"

