[package]
name = "verilog_core"
version = "0.2.2"
edition = "2021"
description = "IEEE 1364 Verilog parse, optimize, and VCD simulation for Circuit Scope (not SystemVerilog)."
license = "MIT"
repository = "https://github.com/um-mepel/circuit-scope-verilog"
readme = "../../README.md"

[[bin]]
name = "csverilog"
path = "src/bin/csverilog.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
wellen = "0.20"

